crates/teleport/tests/compile-fail/self_param.stderr
error: #[remote] functions cannot have `self`
 --> tests/compile-fail/self_param.rs:7:24
  |
7 |     async fn with_self(&self) -> Result<String, AppError> {
  |                        ^

warning: unused import: `AppError`
 --> tests/compile-fail/self_param.rs:1:24
  |
1 | use teleport::{remote, AppError};
  |                        ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
